@@ -1992,6 +1992,7 @@ Dave Giovannini <giovanninid at ociweb dot com>
 Dave Varnell <Dave dot Varvell at ni dot com>
 Howard Finer <hfiner at sonusnet dot com>
 Mark Callaghan <mdcallag at gmail dot com>
+Hanson Lu <suf_lu at yahoo dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
